# mind-the-gap-llm-knowledge

./: .gitignore  CHANGES_SUMMARY.md  CLAUDE.md  README.md  REFACTORING_COMPLETE.md
.claude/: settings.local.json
backend/: .env copy.example  .env.example  .gitignore  README.md  REFACTORING_SUMMARY.md  config.py  main.py  pyproject.toml  verify_refactor.py
backend/agent/: GRAPH_VISUALIZATION.md  __init__.py  graph.py  open_map.py  orchestrator.py  state.py  strategies.py  test_map.py
backend/agent/graphs/: 01_core_structure.mmd  02_detailed_workflow.mmd  03_orchestrator.mmd  04_tools.mmd  05_state_schema.mmd  06_sequence_example.mmd  07_tool_execution.mmd  08_error_handling.mmd
backend/auth/: __init__.py  routes.py
backend/auth/services/: __init__.py  database.py  face_recognition.py  qr_service.py
backend/core/: __init__.py  events.py  exceptions.py  interfaces.py  schemas.py
backend/flights/: __init__.py  models.py  routes.py
backend/flights/services/: __init__.py  database.py
backend/llm/: __init__.py  local.py
backend/observability/: logger.py
backend/rag/: VECTOR_INDEX_SETUP.md  __init__.py  database.py  embeddings.py  ingest_documents.py  ingestion.py  local_rag.py  schemas.py  service.py
backend/rag/documents/: README.md  airport_faq.md
backend/session/: models.py  session_manager.py  session_store.py
backend/tests/: test_imports.py
backend/tests/unit/: test_tools.py
backend/tools/: base.py  executor.py  registry.py  schemas.py
backend/tools/implementations/: arithmetic_tools.py  page_filter_tool.py  rag_tool.py  time_tool.py
backend/transport/: serializers.py  websocket_handler.py
backend/tts/: __init__.py  base.py  elevenlabs_client.py  elevenlabs_service.py  elevenlabs_stream_input.py  kokoro_service.py  service.py
backend/weather/: __init__.py  service.py
docs/: cleanup_notes.md  experiment_plan.md  phase_01_codebase_cleanup.md  phase_02_local_model_inference.md
frontend/: .cta.json  CONTINENT_MAPPING_VERIFICATION.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend_test/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
registration/: .env.example  .gitignore  main.py  (+3 more)
testing/combined_auth/: .env.example  QUICKSTART.md  README.md  pyproject.toml
testing/combined_auth/config/: settings.py
testing/combined_auth/models/: mongodb.py
testing/combined_auth/services/: qr_service.py
testing/deepface/: .gitignore  README.md  config.py  main.py  models.py  pyproject.toml  service.py  utils.py
testing/deepface/static/: index.html
testing/deepface4/: README.md  main.py  pyproject.toml
testing/deepface4/face_db/: ds_model_facenet512_detector_opencv_aligned_normalization_base_expand_0.pkl
testing/deepface4/static/: index.html
(+113 files in other folders)
