[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.31.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-community>=0.3.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.7",
    "pydantic-settings>=2.12.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.0",
    "sentence-transformers>=3.0.0",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
    "motor>=3.6.0",
    "pymongo>=4.11.0",
    "python-multipart>=0.0.9",
    "deepface>=0.0.93",
    "qrcode[pil]>=8.0",
    "pillow>=11.0.0",
    "tf-keras>=2.18.0",
    "langchain-text-splitters>=1.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Local HuggingFace causal-LM inference (LLM_PROVIDER=local).
# `torch` is already pulled in transitively by sentence-transformers, but it
# is listed here explicitly so this group is self-contained.
local = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
]
