[project]
name = "combined-auth"
version = "1.0.0"
description = "Biometric & QR Authentication Module for Smart Kiosks"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "pymongo>=4.10.0",
    "deepface>=0.0.93",
    "qrcode[pil]>=8.0",
    "pillow>=11.0.0",
    "tf-keras>=2.18.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]
