[project]
name = "deepface4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "deepface>=0.0.97",
    "fastapi>=0.128.0",
    "pillow>=12.1.0",
    "python-multipart>=0.0.21",
    "tf-keras>=2.20.1",
    "uvicorn[standard]>=0.40.0",
]
